@@ -11,6 +11,7 @@ Revision 4.1.16a
 - Sync versions of oneliner apps split off async implementation for clarity.
 - Randomize initial in various numeric sequences.
 - MsgAndPduDsp expectResponse parameters passing reworked.
+- GetNext/GetBulk response processing logic moved to getNextVarBinds()
 - Changes towards performance improvement:
   + all dict.has_key() & dict.get() invocations replaced with modern syntax
     (this breaks compatibility with Python 2.1 and older).
